--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     repositories {
+        mavenCentral()
         google()
-        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
